[tool.poetry]
name = "bu-notion-api-practice"
version = "0.1.0"
description = ""
authors = ["sungwook.choi <sungwook.csw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]
Faker = "^13.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
